--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # add_2_calendar: 2.1.0
   http: ^1.3.0
   html: ^0.15.4
   file_selector: ^0.9.0
@@ -42,7 +43,7 @@ flutter:
 
   assets:
     - assets/images/logo.png
-
+    - assets/lawyers_by_region.json
   fonts:
     - family: Open Sans
       fonts:
