--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.project_nomufinder"> <!-- ✅ 패키지 이름 추가 -->
+
     <application
         android:label="project_nomufinder"
         android:name="${applicationName}"
