--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   intl: ^0.18.1
   flutter_riverpod: ^2.4.0
   go_router: ^13.0.0
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.13.2
+  device_info_plus: ^9.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +45,8 @@ flutter:
 
   assets:
     - assets/images/logo.png
+    - .env.dev
+    - .env.prod
 
   fonts:
     - family: Open Sans
