--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,8 @@ flutter:
   assets:
     - assets/images/logo.png
     - assets/lawyers_by_region.json
-    - .env.dev
     - .env.prod
+    - lib/fastapi_server/.env
 
   fonts:
     - family: Open Sans
