지역+마이페이지 작업

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ flutter:
 
   assets:
     - assets/images/logo.png
+    - assets/images/korea_map.png
     - assets/lawyers_by_region.json
     - .env.prod
     - lib/fastapi_server/.env
