--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cloud_firestore: ^4.13.2
   device_info_plus: ^9.0.3
   dio: ^5.4.0
+  table_calendar: ^3.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,8 +49,8 @@ flutter:
     - assets/images/logo.png
     - assets/images/korea_map.png
     - assets/lawyers_by_region.json
+    - .env.dev
     - .env.prod
-    - lib/fastapi_server/.env
 
   fonts:
     - family: Open Sans
