--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   device_info_plus: ^9.0.3
   dio: ^5.4.0
   table_calendar: ^3.0.9
+  firebase_database: ^10.4.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,7 +49,7 @@ flutter:
   assets:
     - assets/images/logo.png
     - assets/images/korea_map.png
-    - assets/lawyers_by_region.json
+    - assets/lawyers_by_region_ver2.json
     - .env.dev
     - .env.prod
 
