--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,30 @@
-# Miscellaneous
+# Flutter/Dart 관련
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+/build/
+flutter_*.png
+linked_*.ds
+unlinked.ds
+unlinked_spec.ds
+
+# macOS 관련
+macos/Flutter/ephemeral/
+macos/Pods/
+macos/Flutter/GeneratedPluginRegistrant.swift
+macos/Flutter/ephemeral
+macos/xcuserdata/
+
+# Windows 관련
+windows/flutter/ephemeral/
+windows/flutter/generated_plugin_registrant.cc
+windows/flutter/generated_plugin_registrant.h
+windows/flutter/generated_plugins.cmake
+
+# 공통 무시 파일
 *.class
 *.log
 *.pyc
@@ -15,34 +41,20 @@ migrate_working_dir/
 serviceAccountKey.json*
 *.code-workspace
 
-# IntelliJ related
+# IDE 관련
 *.iml
 *.ipr
 *.iws
 .idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
+.vscode/
 
 # Symbolication related
-app.*.symbols
+## app.*.symbols
 
 # Obfuscation related
-app.*.map.json
+## app.*.map.json
 
 # Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+## /android/app/debug
+## /android/app/profile
+## /android/app/release
