--- a/.gitignore
+++ b/.gitignore
@@ -5,56 +5,65 @@
 .packages
 .pub-cache/
 .pub/
-/build/
+build/
+pubspec.lock
+
+# 특정 출력 파일 (예: 자동 생성된 이미지, ds 캐시 등)
 flutter_*.png
 linked_*.ds
-unlinked.ds
-unlinked_spec.ds
+unlinked*.ds
 
 # macOS 관련
 macos/Flutter/ephemeral/
 macos/Pods/
 macos/Flutter/GeneratedPluginRegistrant.swift
-macos/Flutter/ephemeral
 macos/xcuserdata/
 
 # Windows 관련
 windows/flutter/ephemeral/
-windows/flutter/generated_plugin_registrant.cc
-windows/flutter/generated_plugin_registrant.h
+windows/flutter/generated_plugin_registrant.*
 windows/flutter/generated_plugins.cmake
 
-# 공통 무시 파일
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
-.env*
-serviceAccountKey.json*
-*.code-workspace
+# Linux 관련 (필요 시)
+linux/flutter/ephemeral/
 
-# IDE 관련
+# Android 관련 (필요 시 명시적으로)
+android/app/build/
+
+# IDE 관련 (공통)
 *.iml
 *.ipr
 *.iws
 .idea/
 .vscode/
 
-# Symbolication related
-## app.*.symbols
+# Python 관련 (백엔드)
+__pycache__/
+*.pyc
+*.pkl
+venv/
+main.pyc
+requirements.txt.lock
 
-# Obfuscation related
-## app.*.map.json
+# 환경 변수 및 보안 키
+.env            # 환경 변수 (실제)
+.env.*          # .env.으로 시작하는 건 다 무시
+!.env.template  # 템플릿은 추적!
+serviceAccountKey.json*
 
-# Android Studio will place build artifacts here
-## /android/app/debug
-## /android/app/profile
-## /android/app/release
+# 시스템/기타
+*.class
+*.log
+*.swp
+.DS_Store
+.atom/
+.history
+.svn/
+.swiftpm/
+.build/
+.buildlog/
+migrate_working_dir/
+
+# 기타 - 심볼/오버퓨스케이션 관련
+*.symbols
+*.map.json
