--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ flutter:
     - assets/lawyers_by_region_ver2.json
     - .env.dev
     - .env.prod
+    - .env.template
+    - .env.template.prod
     - assets/images/banner1.png
     - assets/images/banner2.png
     - assets/images/banner3.png
