--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ main.pyc
 requirements.txt.lock
 
 # 환경 변수 및 보안 키
-.env            # 환경 변수 (실제)
+.env*            # 환경 변수 (실제)
 .env.*          # .env.으로 시작하는 건 다 무시
 !.env.template  # 템플릿은 추적!
 serviceAccountKey.json*
