--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ requirements.txt.lock
 # 환경 변수 및 보안 키
 .env*           # 환경 변수 (실제)
 .env.*          # .env.으로 시작하는 건 다 무시
+rag_nomu_backend/.env*
 serviceAccountKey.json*
 
 # 시스템/기타
