--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ flutter:
     - assets/images/banner1.png
     - assets/images/banner2.png
     - assets/images/banner3.png
+    - assets/images/banner4.png
 
   fonts:
     - family: Open Sans
