250428,20:00-은솔 작업 저장(오늘의 뉴스)
Former-commit-id: d80e8a73d203e965aa2a248fbdd4a61188dc09c0

--- a/.env
+++ b/.env
@@ -4,8 +4,11 @@ FASTAPI_BASE_URL_ANDROID=http://10.0.2.2:8000
 FASTAPI_BASE_URL_IOS=http://localhost:8000
 FASTAPI_BASE_URL=http://localhost:8000
 FIREBASE_CREDENTIALS_PATH=serviceAccountKey.json
+
 # 검색 API용
 FASTAPI_SEARCH_BASE_URL_ANDROID=http://192.168.45.68:8001
 # FASTAPI_SEARCH_BASE_URL_ANDROID=http://10.0.2.2:8001
 # 챗봇 API용
 FASTAPI_CHATBOT_BASE_URL_ANDROID=http://10.0.2.2:8000
+
+YOUTUBE_API_KEY=AIzaSyCmgq3QeBCXiSOZZuA67PNsc9yBieTA7LU
