250428,21:00-은솔 작업 저장(merge)
Former-commit-id: 5f932eab17d0c6a73433b5a031ad7852d52ff244
Former-commit-id: e3db819723c88f77b01ef8e06bbc4eeb0d05a6fb

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,11 @@
         android:label="project_nomufinder"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCwg2Cul4BORN0Pj4CEIG8Fbk7Si7i_JZk"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
