--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:  # ✅ 아이콘 설정 추가됨
+  android: true
+  ios: true
+  image_path: "assets/images/logo2.png"
 
 flutter:
   uses-material-design: true
