--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ requirements.txt.lock
 .env.*          # .env.으로 시작하는 건 다 무시
 rag_nomu_backend/.env*
 serviceAccountKey.json*
+rag_nomu_backend/serviceAccountKey.json
 
 # 시스템/기타
 *.class
