250507,14:05-은솔 작업 저장(로그인UI,회원가입)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
     - assets/images/banner3.png
     - assets/images/banner4.png
     - assets/images/default_user.png
+    - assets/images/google_logo.png
 
   fonts:
     - family: Open Sans
