--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_auth: ^4.17.3
   cloud_firestore: ^4.13.2
   firebase_database: ^10.4.2
+  firebase_messaging: ^14.9.4
 
   # 🌍 지도 및 캘린더
   google_maps_flutter: ^2.3.0
