--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <!-- ✅ Google Maps API Key -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCwg2Cul4BORN0Pj4CEIG8Fbk7Si7i_JZk"/>
+            android:value="Google Maps API Key"/>
 
         <!-- ✅ FCM 기본 설정 -->
         <service
